# neuron. Copyright (C) 2012. <License>.

#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (QuinceSketch)
SET (APPLICATION_NAME "Quince Sketch")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2012")
SET (APPLICATION_VERSION_MAJOR 1)
SET (APPLICATION_VERSION_MINOR 0)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET (APPLICATION_VENDOR_ID "com.neuron")
SET (APPLICATION_VENDOR_NAME "neuron Inc")
SET (APPLICATION_VENDOR_URL "www.neuron.com")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${MAINFOLDER}/src/QuinceCommon")

#
# Configure Files
#
FILE (GLOB_RECURSE CONFIGINPUTS1 *.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS2 *.h.in.cmake)
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
FOREACH (CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
    STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})

FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (Quince_LIBS "QuinceCore" "QuinceDoc")
SET (project_LIBS ${Boost_LIBRARIES} ${Quince_LIBS})

ADD_PCH_RULE("Stdafx.h" ${project_SRCS})

ADD_EXECUTABLE(${PROJECT_NAME} ${project_SRCS} )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${project_LIBS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${PROJECT_NAME} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

